# Traffic-Simulator

./: CMakeLists.txt  README.md  code_formatter.sh  runCMake.sh
doc/: DTAGS  Doxyfile  README.html  README.md  customdoxygen.css  footer.html  header.html
src/: architect_the_map.js  building.cpp  building.hpp  car.cpp  car.hpp  import_map.cpp  import_map.hpp  log.txt  main  main.cpp  map-HOWTO  person.cpp  person.hpp  run.txt  ten_thousands_nodes.xml  the_3x3_map.xml  the_intermediate_map.xml  the_map.xml  tileMap.cpp  tileMap.hpp  trafficLight.cpp  trafficLight.hpp
